# DstarLite

./: CMakeLists.txt  Dlite.pro  README.md  config.cpp  dlite.cpp  dlite.h  environmentoptions.cpp  environmentoptions.h  gl_const.h  heuristics.h  ilogger.h  localmap.cpp  localmap.h  main.cpp  map.cpp  map.h  mission.cpp  mission.h  node.h  openlist.h  searchresult.h  structures.h  xmllogger.cpp  xmllogger.h
maps/: Moscow_0_512.xml  Moscow_0_512_log.xml  Moscow_0_512_tests.xml  ex.xml  ex_log.xml  example.xml  example_log.xml
